aio_row: merge reverts & update patches
GPS, PowerHAL & patches updates

Thanks @AryanKedare 

Signed-off-by: Aryan Kedare <arykedare@gmail.com>